<resources>
    <string name="app_name">Otbo5 - أطبخ</string>
    <string name="title_activity_main">Login Page</string>
    <string name="title_activity_home">Food Categories</string>
    <string name="title_activity_food_details">تفاصيل الوجبة</string>

    <!--Contact us-->
    <string name="contact_us_email">support@otbo5.com</string>
    <string name="contact_us_error_no_email_client">There are no email clients installed</string>
    <string name="contact_us_email_client_chooser_title">Send email...</string>
    <string name="timer_default">00:00</string>

    <!--Menu-->
    <string name="home_page">Home Page</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="share_our_app">Share our App</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>

</resources>
