<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_1">
        <item
            android:id="@+id/item_home_page"
            android:icon="@drawable/home"
            android:title="@string/home_page" />
        <item
            android:id="@+id/item_fav_recipes"
            android:icon="@drawable/heart_icon"
            android:title="@string/favorite_recipes" />
        <item
            android:id="@+id/item_shopping_list"
            android:icon="@drawable/shopping_cart"
            android:title="@string/shopping_list" />
        <item
            android:id="@+id/item_share"
            android:icon="@drawable/share"
            android:title="@string/share_our_app" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/settings_gears"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/group_2">
        <item
            android:id="@+id/item_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
        <item
            android:id="@+id/item_feedback"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/feedback" />
        <item
            android:id="@+id/item_rate_us"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/rate_us" />
    </group>

</menu>